--- a/WebApplication3/Web.config
+++ b/WebApplication3/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="MiConexion"
-			 connectionString="Data Source=DESKTOP-B7LHST0;Initial Catalog=base_prueba;Integrated Security=True;TrustServerCertificate=True"
+		<add name="FitBuddyConnection"
+			 connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=FitBuddyDB;Integrated Security=True"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <system.web>
